--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,45 +1,55 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>{{ page.title }}</title>
+  <meta name="viewport" content="width=device-width">
 
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
+  <!-- syntax highlighting CSS -->
+  <link rel="stylesheet" href="/css/syntax.css">
 
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="/css/main.css">
 
-    </head>
-    <body>
+</head>
+<body>
 
-        <div class="site">
-          <div class="sidebar">
-            <h1 class="title"><a href="/">Jacob Wejendorp</a></h1>
-            <ul>
-              <li>
-                <a href="/">Home</a>
-              </li>
-              <li>
-                <a href="/posts.html">Posts</a>
-              </li>
-            </ul>
-            <div class="contact">
-              <h2 class="meta">Connect</h2>
-              <p>
-                <a href="https://linkedin.com/in/jacobwejendorp">LinkedIn</a><br />
-                <a href="https://github.com/wejendorp">Github</a><br />
-                <a href="https://twitter.com/wejendorp">Twitter</a><br />
-              </p>
-            </div>
-          </div>
+  <div class="site">
+    <div class="sidebar">
+      <h1 class="title"><a href="/">Jacob Wejendorp</a></h1>
+      <ul>
+        <li>
+          <a href="/">Home</a>
+        </li>
+        <li>
+          <a href="/posts.html">Posts</a>
+        </li>
+      </ul>
+      <div class="contact">
+        <h2 class="meta">Connect</h2>
+        <p>
+          <a href="https://linkedin.com/in/jacobwejendorp">LinkedIn</a><br />
+          <a href="https://github.com/wejendorp">Github</a><br />
+          <a href="https://twitter.com/wejendorp">Twitter</a><br />
+        </p>
+      </div>
+    </div>
 
-          <div class="content">
-            {{ content }}
-          </div>
-        </div>
+    <div class="content">
+      {{ content }}
+    </div>
+  </div>
 
-    </body>
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-23577403-2', 'dorp.io');
+  ga('send', 'pageview');
+
+  </script>
+</body>
 </html>
