Made the site responsive and nicer.

--- a/css/main.css
+++ b/css/main.css
@@ -14,19 +14,27 @@ html, body { height: 100%; }
 
 body {
   background-color: #FFF;
-  font: 13.34px Helvetica, Arial, sans-serif;
-  font-size: small;
-  text-align: center;
+  font: 15px Helvetica, Arial, sans-serif;
+  line-height: 1.7em;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-size: 100%; }
+  font-family: 'Open Sans', sans-serif;
+  font-size: 100%;
+  margin-bottom: 1em;
+}
 
-h1 { margin-bottom: 1em; font-size: 20px;}
+h1 {
+  font-size: 22px;
+}
+h2 {
+  font-size: 16px;
+}
+
 p { margin: 1em 0; }
 
-a         { color: #00e; text-decoration: none;}
-a:hover   { color: #000; }
+a         { color: #00a; text-decoration: none;}
+a:hover   { color: #000; text-decoration: underline;}
 
 /*****************************************************************************/
 /*
@@ -37,35 +45,48 @@ a:hover   { color: #000; }
   list-style-type: none;
   margin-bottom: 2em;
 }
-
-.posts li {
-  line-height: 1.75em;
-}
-
-.posts span {
-  color: #aaa;
-  font-family: Monaco, "Courier New", monospace;
-  font-size: 80%;
+.posts h1 a {
+  color: inherit;
 }
 
 .card {
-  background: #fafafa;
+  border-top: 2px solid #fafafa;
+  border-bottom: 2px solid #fafafa;
   padding: 16px;
   border-radius: 3px;
-  margin-bottom: 32px;
+  /*margin-bottom: 32px;*/
 }
 .card .content {
-  margin: 0 0 0 136px;
+  margin: 0 0 0 152px;
+}
+.card .content p:first-child {
+  margin-top: 0;
+}
+.card .content p:last-child {
+  margin-bottom: 0;
 }
 .clearfix:after {
   content: "";
   display: table;
   clear: both;
 }
+.bullets span {
+  padding: 6px;
+}
+.bullets.center {
+  text-align: center;
+  padding: 32px;
+  color: #999;
+}
+.bullets.center  a {
+  color: #999;
+}
+
 
 img.profile {
   float: left;
   width: 120px;
+  border-radius: 60px;
 }
 
 /*****************************************************************************/
@@ -74,59 +95,84 @@ img.profile {
 /*
 /*****************************************************************************/
 
-.site {
-  font-size: 115%;
-  text-align: justify;
-  width: 960px;
-  margin: 0 auto 48px auto;
-  line-height: 1.5em;
+.container {
+  width: 760px;
+  margin: 0 auto;
 }
 
-.title a {
-  color: #a00;
-}
-
-.title a:hover {
-  color: #000;
+@media(max-width: 792px) {
+  .container {
+    width: auto;
+    padding: 0 16px;
+  }
+  img.profile {
+    display: block;
+    float: none;
+  }
+  .card .content {
+    margin: 0;
+  }
 }
 
 .meta {
   color: #aaa;
 }
 
-.sidebar {
-  position: fixed;
-  height: 100%;
-  width: 192px;
-  padding-right: 48px;
+.header {
+  background: #fafafa;
+  border-bottom: 1px solid #f3f3f3;
+  position: absolute;
+  width: 100%;
+  top: 0;
   min-height: 1px;
+  line-height: 48px;
+}
+.header * {
+  margin-bottom: 0;
+}
+.header .title {
+  font-family: 'Open Sans', sans-serif;
+  float: left;
+  width: 152px;
+  text-align: center;
 }
 
-.sidebar ul {
+.header .title a {
+  color: #a00;
+}
+
+.header .title a:hover {
+  color: #000;
+}
+
+.header ul {
   list-style-type: none;
-  margin-bottom: 20px;
+  float: left;
 }
-.sidebar ul li a {
+.header ul li {
+  display: inline-block;
+}
+.header ul li a {
   display: block;
-  padding: 6px 0;
+  padding: 0 16px;
+  color:   #333;
 }
-.sidebar ul li a:hover {
+.header ul li a:hover {
   color: #8085C1;
 }
 
 
-.sidebar .contact {
+.header .contact {
   border-top: 1px solid #fafafa;
   padding-top: 16px;
 }
 
-.sidebar .contact a {
+.header .contact a {
   color: #8085C1;
 }
 
 .content {
-  margin-top: 40px;
-  margin-left: 240px;
+  margin-top: 60px;
 }
 
 
