--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,13 +11,12 @@
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="/css/main.css">
-
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 <body>
-
-  <div class="site">
-    <div class="sidebar">
-      <h1 class="title"><a href="/">Jacob Wejendorp</a></h1>
+  <div class="header">
+    <div class="container">
+      <h1 class="title"><a href="/">dorp.io</a></h1>
       <ul>
         <li>
           <a href="/">Home</a>
@@ -26,19 +25,11 @@
           <a href="/posts.html">Posts</a>
         </li>
       </ul>
-      <div class="contact">
-        <h2 class="meta">Connect</h2>
-        <p>
-          <a href="https://linkedin.com/in/jacobwejendorp">LinkedIn</a><br />
-          <a href="https://github.com/wejendorp">Github</a><br />
-          <a href="https://twitter.com/wejendorp">Twitter</a><br />
-        </p>
-      </div>
     </div>
+  </div>
 
-    <div class="content">
-      {{ content }}
-    </div>
+  <div class="container content">
+    {{ content }}
   </div>
 
   <script>
