Update header style

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 <body>
   <div class="header">
     <div class="container">
-      <h1 class="title"><a href="/">dorp.io</a></h1>
+      <a class="title" href="/">dorp.io</a>
       <ul>
         <li>
           <a href="/">Home</a>
