--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,7 @@ a:hover   { color: #000; text-decoration: underline;}
 .card .content {
   margin: 0 0 0 140px;
 }
-.card .content p:first-child {
+.card .content *:first-child {
   margin-top: 0;
 }
 .card .content p:last-child {
