--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,22 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>{{ page.title }}</title>
+  <title>{{ page.title }} - {{ site.name }}</title>
+  <meta name="keywords" content="{{site.keywords | join: ','}}" />
+
+  {% if page.description %}
+    <meta name="description" content="{{ page.description | truncatewords: 200 | strip_newlines | escape_once }}" />
+  {% else %}
+    <meta name="description" content="{{ content | strip_html | truncatewords: 200 | strip_newlines | escape_once }}" />
+  {% endif %}
+
+  {% if page.date %}
+  <meta http-equiv="date" content="{{page.date |date: '%A, %d  %Y %H:%M:%S GMT'}}" />
+  <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}" />
+  {% endif %}
+  <meta property="og:title" content="{{ page.title }}" />
+  <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
+
   <meta name="viewport" content="width=device-width">
 
   <!-- syntax highlighting CSS -->
