--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,9 @@
   {% endif %}
   <meta property="og:title" content="{{ page.title }}" />
   <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@wejendorp">
+  <meta name="twitter:creator" content="@wejendorp">
 
   <meta name="viewport" content="width=device-width">
 
