--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,10 +13,10 @@
 
   {% if page.description %}
     <meta name="description" content="{{ page.description | truncatewords: 200 | strip_newlines | escape_once }}" />
-    <meta name="twitter:description" content="{{ page.description | truncatewords: 200 | strip_newlines | escape_once }}">
+    <meta name="og:description" content="{{ page.description | truncatewords: 200 | strip_newlines | escape_once }}">
   {% else %}
     <meta name="description" content="{{ content | strip_html | truncatewords: 200 | strip_newlines | escape_once }}" />
-    <meta name="twitter:description" content="{{ content | strip_html | truncatewords: 200 | strip_newlines | escape_once }}">
+    <meta name="og:description" content="{{ content | strip_html | truncatewords: 200 | strip_newlines | escape_once }}">
   {% endif %}
 
   {% if page.date %}
