--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,13 @@
 ---
 layout: default
 ---
+
+{% assign category = site.my_categories | where: "slug", post.category %}
+{% assign category = category[0] %}
+{% if category %}
+    {% capture category_content %}<a class="label" href="{{ category.url }}">{{ category.name }}</a>{% endcapture %}
+{% endif %}
+
 <h1>{{ page.title }}</h1>
 <p class="meta">{{ page.date | date_to_string }}</p>
 
@@ -8,6 +15,7 @@ layout: default
 {{ content }}
 </div>
 
+{{category_content}}
 <div class="share">
   <a href="https://twitter.com/share" class="twitter-share-button" data-lang="en">Tweet</a>
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
