--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <div class="header">
+  <div class="navbar">
     <div class="container">
       <a class="title" href="/">dorp.io</a>
       <ul>
@@ -45,7 +45,10 @@
           <a href="/">Home</a>
         </li>
         <li>
-          <a href="/posts.html">Posts</a>
+          <a href="/blog/">Posts</a>
+        </li>
+        <li>
+          <a href="/about/">About</a>
         </li>
       </ul>
       <div class="clearfix"></div>
