--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,36 +2,42 @@
 layout: default
 ---
 
-{% assign category = site.my_categories | where: "slug", post.category %}
-{% assign category = category[0] %}
-{% if category %}
-    {% capture category_content %}<a class="label" href="{{ category.url }}">{{ category.name }}</a>{% endcapture %}
-{% endif %}
+{% assign post = page %}
+{% capture post_subtitle %}<time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: '%b. %d, %Y' }}</time>{% endcapture %}
 
-<h1>{{ page.title }}</h1>
-<p class="meta">{{ page.date | date_to_string }}</p>
+{% include title_header.html title=post.title subtitle=post_subtitle %}
 
 <div class="post">
-{{ content }}
+	{{ content }}
+
+	{% assign category = site.my_categories | where: "slug", post.category %}
+	{% assign category = category[0] %}
+	{% if category %}
+	  {% capture category_content %}<a class="label" href="{{ category.url }}" style="background-color:{{ category.color }}">{{ category.name }}</a>{% endcapture %}
+	{% endif %}
+
+	{% if post.tags.size > 0 %}
+	  {% capture tags_content %} with <span class="icon-price-tag{% if post.tags.size > 1 %}s{% endif %}"></span>: {% endcapture %}
+	  {% for post_tag in post.tags %}
+	    {% assign tag = site.my_tags | where: "slug", post_tag %}
+	    {% if tag %}
+	      {% assign tag = tag[0] %}
+	      {% capture tags_content_temp %}{{ tags_content }}<a href="{{ tag.url }}">{{ tag.name }}</a>{% if forloop.last == false %}, {% endif %}{% endcapture %}
+	      {% assign tags_content = tags_content_temp %}
+	    {% endif %}
+	  {% endfor %}
+	{% endif %}
+
+	<p class="m-t-3 text-muted font-italic">
+	  <small>Posted{% if category_content %} in </small>{{ category_content }}<small>{% endif %}{{ tags_content }}</small>
+	</p>
 </div>
 
-{{category_content}}
 <div class="share">
   <a href="https://twitter.com/share" class="twitter-share-button" data-lang="en">Tweet</a>
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
 
-<div id="disqus_thread"></div>
-<script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = 'jacobwejendorp'; // required: replace example with your forum shortname
-
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+{% if page.comments %}
+	{% include disqus.html %}
+{% endif %}
