Initial comment text

--- a/_includes/post_info.html
+++ b/_includes/post_info.html
@@ -31,5 +31,5 @@
 		{% endif %}
 		{{ tags_content }}
 	</small>
-  <a class="pull-right" href="{{ post.url }}#disqus_thread">comments</a>
+  <a class="pull-right" href="{{ post.url }}#disqus_thread">0 Comments</a>
 </p>
