--- a/_includes/post_info.html
+++ b/_includes/post_info.html
@@ -30,6 +30,7 @@
 			<small>
 		{% endif %}
 		{{ tags_content }}
+
+		<a class="comment-count pull-right" href="{{ post.url }}#disqus_thread">0 Comments</a>
 	</small>
-  <a class="pull-right" href="{{ post.url }}#disqus_thread">0 Comments</a>
 </p>
