--- a/_includes/vcard.html
+++ b/_includes/vcard.html
@@ -4,7 +4,7 @@
     <h1>Hi, I'm Jacob,</h1>
     <p>
     	I am passionate about the web and algorithms.<br />
-	    I write about javascript mostly, but no promises!
+	    I write about javascript mostly, but no <i>promises</i>!
 	  </p>
 
     <div class="bullets center">
