--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
           <a href="/">Home</a>
         </li>
         <li>
-          <a href="/blog/">Posts</a>
+          <a href="/posts/">Posts</a>
         </li>
         <li>
           <a href="/about/">About</a>
