Clean is up a bit

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,11 +38,8 @@
 <body>
   <div class="navbar">
     <div class="container">
-      <a class="title" href="/">dorp.io</a>
+      <a class="title" href="/posts/">dorp.io</a>
       <ul>
-        <li>
-          <a href="/">Home</a>
-        </li>
         <li>
           <a href="/posts/">Posts</a>
         </li>
