--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,7 @@ p { margin: 1em 0; }
 
 a         { color: #0066ff; text-decoration: none;}
 a:hover   { color: #003366; text-decoration: underline;}
+a.disabled { pointer-events: none; }
 
 ul, ol {
   margin-left: 1.35em;
@@ -48,7 +49,7 @@ ul.vsp li {
 	margin-bottom: 1em;
 }
 
-.text-muted {
+.text-muted, .disabled {
 	color: #aaa;
 }
 
@@ -155,7 +156,7 @@ img.gravatar {
 .container {
   width: 50rem;
   margin: 0 auto;
-  padding: 1rem 3rem;
+  padding: 0 3rem;
 }
 .container.content {
 	padding-bottom: 40px;
@@ -247,7 +248,7 @@ h1 + p.meta {
 }
 
 .pagination {
-	margin: 0 auto;
+	margin: 1em auto 0;
 	text-align: center;
 }
 .pagination > * {
