--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,9 @@
 
 
   <meta name="viewport" content="width=device-width">
+  <link rel="icon"
+      type="image/ico"
+      href="/favicon.ico">
 
   <!-- syntax highlighting CSS -->
   <link rel="stylesheet" href="/css/syntax.css">
